src/components/ProfilePopup/ProfilePopup.scss
.profile-popup-wrapper {
  z-index: 1;
  border-radius: 10px;
  background-color: $bgGrey;
  position: absolute;
  top: 43px;
  right: 0;

  ul {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    width: 100%;

    a {
      box-sizing: border-box;
      display: flex;
      align-items: center;
      padding: 10px 60px 10px 20px;
      width: 100%;
      cursor: pointer;
      border-radius: 10px;
      text-decoration: none;
      color: $textPrimary;

      &:hover {
        background-color: $bgLightGrey;
      }
    }

    @media (max-width: 480px) {
      a {
        padding: 10px 40px 10px 15px;
      }
    }

    svg {
      padding-right: 5px;
    }
  }
}

